fix search with white space

--- a/app/src/app/shared/components/search/search.component.scss
+++ b/app/src/app/shared/components/search/search.component.scss
@@ -38,7 +38,7 @@ span.form-control-feedback {
 
 .fa-search {
   color: #38dfa7;
-  margin: -30px 7px;
+  margin: -26px 7px;
   float: right;
 }
 
